--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
                 </div>
 
                 <div class="social-links">
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://instagram.com/utsab199" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/stha4us" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://facebook.com/stha4us" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://linkedin.com/in/utsab-stha4us" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:utsab199@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
