--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, I am Utsab</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -141,7 +141,7 @@
 
         <div class="main-content">
             <div class="image-section">
-                <img src="https://github.com/stha4us/my-website/blob/main/fb_img_1756258840080-mp84OvOJpOh4wVxa.jpg" alt="Profile" class="profile-image">
+                <img src="https://drive.google.com/uc?export=download&id=1z4zrbIGzZY4ufogfAXBKbQPw4S55ZsGA" alt="Profile" class="profile-image">
             </div>
 
             <div class="text-section">
@@ -161,10 +161,10 @@
                 </div>
 
                 <div class="social-links">
-                    <a href="https://instagram.com/utsab199" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://x.com/stha4us" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://facebook.com/stha4us" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://linkedin.com/in/utsab-stha4us" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://instagram.com/utsab199"  style="margin-right: 50px;" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/stha4us"  style="margin-right: 50px;" aria-label="X"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://facebook.com/stha4us" style="margin-right: 50px;" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://linkedin.com/in/utsab-stha4us" style="margin-right: 50px;" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:utsab199@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
