Update the profile image src from drive to git.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="main-content">
             <div class="image-section">
-                <img src="https://drive.google.com/uc?export=view&id=1z4zrbIGzZY4ufogfAXBKbQPw4S55ZsGA" alt="Profile" class="profile-image">
+                <img src="https://raw.githubusercontent.com/stha4us/my-website/main/assets/file_00000000074861fba133676790d08862.png" alt="Profile" class="profile-image">
             </div>
 
             <div class="text-section">
